--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -107,6 +107,7 @@
                         <id>start-jetty</id>
                         <phase>pre-integration-test</phase>
                         <goals>
+                            <goal>stop</goal>
                             <goal>run-exploded</goal>
                         </goals>
                         <configuration>
